--- a/home.css
+++ b/home.css
@@ -21,13 +21,18 @@ h1{
     line-height: 1.3;
 }
 .container{
+    /* background-image: url(Images/lib-six.jpg); */
+    /* background-size: 100vw;  */
+    /* background-position: center;  */
+    /* background-repeat: no-repeat;  */
+    /* color:white; */
     display: flex;
     height: 100vh;
 }
 .left-container{
     width:60%;
     padding: 0 5%;
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('Images/lc-bg.jpg');
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('Images/lib-two.jpg');
     background-size:cover; 
     background-position: center; 
     background-repeat: no-repeat; 
